[tool.poetry]
name = "birthday-api"
version = "0.1.0"
description = ""
authors = ["Kulunchick <nikolikrasovski@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
alembic-postgresql-enum = "^1.2.0"
pydantic-settings = "^2.2.1"


[tool.poetry.group.lint.dependencies]
ruff = "^0.4.5"


[tool.poetry.group.types.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
